[DW-1458] Make sure navigation tiles have equal spacing
This is specifically to override the
`.article-section * + *` selector.

--- a/repository-data/webfiles/src/main/resources/site/scss/components/_navigation-tiles.scss
+++ b/repository-data/webfiles/src/main/resources/site/scss/components/_navigation-tiles.scss
@@ -16,7 +16,8 @@
 .navigation-tile:visited,
 .navigation-tile:link {
     display: block;
-    margin-bottom: 20px;
+    margin-top: 0;
+    margin-bottom: 25px;
     padding: 40px 40px 60px 40px;
     border: 3px solid transparent;
     color: $text-colour;
